# MagniLog

./: Cargo.toml  README.md
.github/workflows/: auto-upgrade-dependencies.yml  auto-upgrade-incompatible-dependencies.yml  build-and-test.yml
src/: main.rs
