[package]
authors = ["Braden Steffaniak"]
categories = [
    "command-line-interface",
    "command-line-utilities",
    "visualization",
]
description = "Magnify your logs"
edition = "2021"
keywords = ["filter", "logging", "logs", "search"]
license = "MPL-2.0"
name = "magnilog"
readme = "README.md"
repository = "https://github.com/BSteffaniak/MagniLog"
version = "0.1.0"

[[bin]]
name              = "magnilog"
path              = "src/main.rs"
required-features = []

[dependencies]
async-trait = "0.1.83"
bytesize = "1.3.0"
clap = { version = "4.5.20", features = ["derive"] }
free_log_client = "0.4.1"
futures = "0.3.31"
kanal = "0.1.0-pre8"
log = "0.4.22"
regex = "1.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = [
    "fs",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
    "tracing",
] }
tokio-stream = "0.1.16"
tokio-util = "0.7.12"

[features]
fail-on-warnings = []
