[package]
authors = ["Braden Steffaniak"]
categories = [
    "command-line-interface",
    "command-line-utilities",
    "visualization",
]
description = "Magnify your logs"
edition = "2021"
keywords = ["filter", "logging", "logs", "search"]
license = "MPL-2.0"
name = "magnilog"
readme = "README.md"
repository = "https://github.com/BSteffaniak/MagniLog"
version = "0.1.0"

[[bin]]
name              = "magnilog"
path              = "src/main.rs"
required-features = []

[dependencies]
async-trait = "0.1.88"
bytesize = "2.0.1"
clap = { version = "4.5.32", features = ["derive"] }
free_log_client = "0.5.0"
futures = "0.3.31"
kanal = "0.1.1"
log = "0.4.26"
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = [
    "fs",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
    "tracing",
] }
tokio-stream = "0.1.17"
tokio-util = "0.7.14"

[features]
fail-on-warnings = []
